--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,41 +15,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_weight="1" />
+
     <TextView
         android:id="@+id/expressionTextView"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="15dp"
+        android:gravity="end"
+        android:textColor="@color/black"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="44dp"
-        android:layout_marginStart="15dp"
-        android:gravity="end"
-        android:textSize="30sp"
-        android:textColor="@color/black"
-        android:layout_marginEnd="15dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/resultTextView"
-        app:layout_constraintBottom_toTopOf="@id/keypadTableLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="end"
-        android:textSize="20sp"
-        android:textColor="#aaaaaa"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:gravity="end"
+        android:textColor="#aaaaaa"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/keypadTableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TableLayout
         android:id="@+id/keypadTableLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:shrinkColumns="*"
-        android:paddingBottom="21dp"
-        android:paddingTop="21dp"
         android:paddingStart="15dp"
+        android:paddingTop="21dp"
         android:paddingEnd="15dp"
+        android:paddingBottom="21dp"
+        android:shrinkColumns="*"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +60,7 @@
         app:layout_constraintVertical_weight="1.5">
 
         <TableRow android:layout_weight="1">
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/clearButton"
                 android:layout_width="wrap_content"
@@ -67,18 +71,21 @@
                 android:stateListAnimator="@null"
                 android:text="C"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_background"
-                android:stateListAnimator="@null"
-                android:enabled="false"
                 android:clickable="false"
+                android:enabled="false"
+                android:stateListAnimator="@null"
                 android:text="()"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonModulo"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -88,7 +95,9 @@
                 android:text="%"
                 android:textColor="@color/green"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonDivider"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -101,7 +110,9 @@
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button7"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -111,16 +122,21 @@
                 android:text="7"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_background"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="8"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button9"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -130,7 +146,9 @@
                 android:text="9"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMulti"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -143,7 +161,9 @@
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -153,16 +173,21 @@
                 android:text="4"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_background"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="5"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button6"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -172,7 +197,9 @@
                 android:text="6"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonMinus"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -185,7 +212,9 @@
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -195,16 +224,21 @@
                 android:text="1"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_background"
+                android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
                 android:text="2"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -214,7 +248,9 @@
                 android:text="3"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonPlus"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
@@ -227,6 +263,7 @@
         </TableRow>
 
         <TableRow android:layout_weight="1">
+
             <ImageButton
                 android:id="@+id/historyButton"
                 android:layout_width="wrap_content"
@@ -238,27 +275,32 @@
                 android:stateListAnimator="@null"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="7dp"
-                android:background="@drawable/button_background"
-                android:stateListAnimator="@null"
-                android:text="0"
-                android:textColor="@color/textColor"
-                android:textSize="24sp" />
-            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button0"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:background="@drawable/button_background"
                 android:onClick="buttonClicked"
                 android:stateListAnimator="@null"
-                android:text="."
-                android:enabled="false"
-                android:clickable="false"
+                android:text="0"
                 android:textColor="@color/textColor"
                 android:textSize="24sp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="7dp"
+                android:background="@drawable/button_background"
+                android:clickable="false"
+                android:enabled="false"
+                android:onClick="buttonClicked"
+                android:stateListAnimator="@null"
+                android:text="."
+                android:textColor="@color/textColor"
+                android:textSize="24sp" />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/resultButton"
                 android:layout_width="wrap_content"
